--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,7 +55,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 1100px;
+  max-width: 700px;
   margin: 3.5rem auto 3.5rem auto;
   padding: 2.5rem 2.5rem 2rem 2.5rem;
   background: var(--color-card-light);
@@ -66,7 +66,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  @media (max-width: 1100px) {
+  @media (max-width: 700px) {
+    padding: 1.2rem 0.5rem;
+  }
+}
+
+.container-proyectos {
+  max-width: 1100px;
+  width: 100%;
+}
+@media (max-width: 1100px) {
+  .container-proyectos {
     max-width: 99vw;
     padding: 1.2rem 0.5rem;
   }
